# facedb

./: .env  .gitignore  Elastic-Face.ipynb  README.md  docker-compose.yml  facedb.ipynb  index-suspects.ipynb  index_suspects.py  index_wiki.py  index_wikidata.py  main.py  mps.csv  mps.ipynb  package-lock.json  police.ipynb  police2.ipynb  pyproject.toml  requirements.txt  rt.py  sandbox.ipynb  search-police.ipynb  search.ipynb  users.ipynb  wiki_data_query_results.py  wikidata.ipynb  wikisearch.ipynb
dashboard/: nuxt.config.ts  package.json  pnpm-lock.yaml
dashboard/app/: app.vue
dashboard/app/components/: TeamsMenu.vue  UserMenu.vue
dashboard/app/components/suspects/: AddModal.vue  DeleteModal.vue
dashboard/app/layouts/: default.vue
dashboard/app/middleware/: auth.ts
dashboard/app/pages/: index.vue  login.vue
dashboard/app/stores/: auth.ts
dashboard/app/types/: index.d.ts
dataset/db/: ds_model_arcface_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_facenet512_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_facenet_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
frontend/: .env  nuxt.config.ts  package.json
frontend/locales/: en-US.json
frontend/middleware/: auth.ts
frontend/pages/: index.vue  login.vue
frontend/pages/add/: index.vue
frontend/pages/dashboard/: index.vue
frontend/pages/people/: index.vue
frontend/pages/search/: index.vue
frontend/plugins/: preline.client.ts
frontend/stores/: auth.js
(+10 files in other folders)
