[project]
name = "facedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepface>=0.0.95",
    "elasticsearch>=9.1.0",
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "retina-face>=0.0.17",
    "sparqlwrapper>=2.0.0",
    "tf-keras>=2.20.1",
]
